# Spot

./: .checklog  .dir-locals.el  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  THANKS  configure.ac  lrde-upload.sh
bench/ltl2tgba/: Makefile.am  README  algorithms  big  defs.in  known  lbtt2csv.pl  parseout.pl  small  sum.py  tools
buddy/: ChangeLog  configure.ac
buddy/m4/: gccwarns.m4
buddy/src/: Makefile.am  bdd.h  bddio.c  bddop.c  bddx.h  cache.c  cache.h  cppext.cxx  fdd.c  imatrix.c  kernel.c  kernel.h  prime.c  reorder.c
doc/: .gitignore  Doxyfile.in  Makefile.am  mainpage.dox
doc/org/: .dir-locals.el  .dir-locals.el.in  .gitignore  arch.tex  autcross.org  autfilt.org  citing.org  compile.org  concepts.org  csv.org  dstar2tgba.org  g++wrap.in  genaut.org  genltl.org  hierarchy.org  hierarchy.tex  hoa.org  index.org  init.el.in  install.org  ioltl.org  ltl2tgba.org  ltl2tgta.org  ltlcross.org  ltldo.org  ltlfilt.org  ltlgrind.org  ltlsynt.org  oaut.org  randaut.org  randltl.org  satmin.org  setup.org  spot.css  syntax.css  tools.org  tut.org  tut01.org  tut02.org  tut03.org  (+13 more)
doc/tl/: .gitignore  Makefile.am  tl.bib  tl.tex
iface/ltsmin/: .gitignore  Makefile.am  README  check.test  finite.test  kripke.test  ltsmin.cc  ltsmin.hh  modelcheck.cc
python/: .gitignore  Makefile.am  buddy.i  spot.py  spot_impl.i
python/ajax/: spotcgi.in  trans.html
python/spot/: __init__.py  aux.py  gen.i  impl.i  ltsmin.i
python/tests/: Makefile.am  acc_cond.ipynb  accparse2.py  formulas.ipynb  ipnbdoctest.py  ltl2tgba.test  product.ipynb  randltl.ipynb  run.in  testingaut.ipynb
spot/: Makefile.am
spot/graph/: graph.hh  ngraph.hh
spot/kripke/: fairkripke.cc  fairkripke.hh  fwd.hh  kripke.cc  kripke.hh  kripkegraph.hh
spot/ltsmin/: Makefile.am  finite.test  kripke.test  ltsmin.cc  ltsmin.hh  modelcheck.cc
spot/misc/: Makefile.am  bareword.cc  bddlt.hh  bitvect.cc  bitvect.hh  casts.hh  common.hh  env.hh  escape.cc  fixpool.hh  formater.cc  formater.hh  game.cc  game.hh  hash.hh  intvcmp2.cc  intvcmp2.hh  intvcomp.cc  intvcomp.hh  location.hh  minato.cc  minato.hh  mspool.hh  optionmap.cc  optionmap.hh  random.cc  random.hh  satsolver.cc  satsolver.hh  timer.cc  timer.hh  tmpfile.cc  tmpfile.hh  trival.hh
spot/parseaut/: fmterror.cc  parseaut.yy  parsedecl.hh  public.hh  scanaut.ll
spot/parsetl/: fmterror.cc  parsedecl.hh  parsetl.yy  scantl.ll
spot/priv/: Makefile.am  accmap.hh  bddalloc.cc  bddalloc.hh  enumflags.hh  freelist.cc  satcommon.cc  satcommon.hh  trim.cc  weight.cc  weight.hh
spot/sanity/: 80columns.test  Makefile.am  ipynb.test  style.test
spot/ta/: ta.hh  taexplicit.cc  taexplicit.hh  taproduct.cc  taproduct.hh  tgta.hh  tgtaexplicit.cc  tgtaexplicit.hh  tgtaproduct.cc  tgtaproduct.hh
spot/taalgos/: dot.cc  dot.hh  emptinessta.cc  emptinessta.hh  minimize.cc  reachiter.cc  reachiter.hh  statessetbuilder.cc  stats.cc  tgba2ta.cc  tgba2ta.hh
spot/tests/: Makefile.am  acc.cc  bitvect.cc  complementation.test  complete.test  emptchk.cc  equalsf.cc  exclusive-ltl.test  graph.cc  ikwiad.cc  intvcomp.cc  latex.test  lbttparse.test  ltl2dstar.test  ltl2dstar2.test  ltl2dstar4.test  ltlcross2.test  ltlcrossce2.test  ltlfilt.test  maskacc.test  monitor.test  ngraph.cc  readsat.cc  readsave.test  reduc0.test  strength.test  tgbagraph.test  tostring.cc  twagraph.cc  uniq.test
spot/tl/: Makefile.am  apcollect.cc  contain.cc  contain.hh  declenv.hh  defaultenv.hh  dot.cc  exclusive.cc  exclusive.hh  formula.cc  formula.hh  hierarchy.cc  hierarchy.hh  length.cc  length.hh  ltlf.cc  ltlf.hh  mark.cc  mark.hh  mutation.cc  mutation.hh  parse.hh  print.cc  print.hh  randomltl.cc  randomltl.hh  relabel.cc  relabel.hh  remove_x.cc  simplify.cc  simplify.hh  snf.cc  snf.hh  unabbrev.cc  unabbrev.hh
spot/twa/: Makefile.am  acc.cc  acc.hh  bdddict.cc  bdddict.hh  bddprint.cc  formula2bdd.cc  formula2bdd.hh  taatgba.cc  taatgba.hh  twa.cc  twa.hh  twagraph.cc  twagraph.hh  twaproduct.cc  twaproduct.hh  twasafracomplement.cc  twasafracomplement.hh
spot/twaalgos/: Makefile.am  alternation.cc  alternation.hh  are_isomorphic.cc  are_isomorphic.hh  bfssteps.cc  bfssteps.hh  canonicalize.cc  cleanacc.cc  cleanacc.hh  cobuchi.cc  cobuchi.hh  complement.cc  complement.hh  complete.cc  complete.hh  compsusp.cc  compsusp.hh  copy.cc  copy.hh  couvreurnew.cc  cycles.cc  cycles.hh  degen.cc  degen.hh  determinize.cc  determinize.hh  dot.cc  dot.hh  dtbasat.cc  dtbasat.hh  dtwasat.cc  dtwasat.hh  dualize.cc  dualize.hh  emptiness.cc  emptiness.hh  emptiness_stats.hh  gv04.cc  hoa.cc  (+85 more)
src/ltltest/: .gitignore  Makefile.am  consterm.cc  consterm.test  equals.cc  equals.test  equalsf.cc  eventuniv.test  genltl.cc  isop.test  kind.cc  kind.test  latex.test  lbt.test  length.cc  length.test  lenient.test  ltlcrossgrind.test  ltlfilt.test  ltlgrind.test  ltlrel.cc  nenoform.test  parse.test  parseerr.test  rand.test  randltl.cc  readltl.cc  reduc.cc  reduc.test  reduc0.test  reduccmp.test  reducpsl.test  remove_x.test  stutter.test  syntimpl.cc  syntimpl.test  tostring.cc  unabbrevwm.test  utf8.test  uwrm.test
src/tests/: .gitignore  Makefile.am  acc.cc  acc.test  acc2.test  babiak.test  bad_parsing.test  basimul.test  bitvect.cc  checkpsl.cc  checkta.cc  complement.test  complementation.cc  complete.test  consterm.cc  defs.in  degendet.test  degenid.test  det.test  dfs.test  dstar.test  dupexp.test  emptchk.cc  emptchke.test  equalsf.cc  exclusive-tgba.test  explpro3.test  graph.cc  hoaparse.test  ikwiad.cc  intvcmp2.cc  intvcomp.cc  isomorph.test  isop.test  kind.cc  kind.test  kripke.test  kv.test  latex.test  length.cc  (+60 more)
src/tgbaalgos/: Makefile.am  are_isomorphic.cc  are_isomorphic.hh  bfssteps.cc  bfssteps.hh  canonicalize.cc  canonicalize.hh  cleanacc.cc  cleanacc.hh  closure.cc  closure.hh  complete.cc  complete.hh  compsusp.cc  compsusp.hh  cutscc.cc  cutscc.hh  cycles.cc  cycles.hh  dbacomp.cc  dbacomp.hh  degen.cc  degen.hh  dotty.cc  dotty.hh  dottydec.cc  dottydec.hh  dtbasat.cc  dtbasat.hh  dtgbacomp.cc  dtgbacomp.hh  (+103 more)
(+1011 files in other folders)
